// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has a link to /test 1`] = `
<a
  className="makeStyles-root-1 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
  href="/test"
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
>
  Rubiwin
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</a>
`;

exports[`is disabled 1`] = `
<button
  className="makeStyles-root-1 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root makeStyles-disabled-2 Mui-disabled  css-1e6y48t-MuiButtonBase-root-MuiButton-root"
  disabled={true}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  Rubiwin
</button>
`;

exports[`is fullWidth 1`] = `
<button
  className="makeStyles-root-1 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-fullWidth MuiButtonBase-root  css-10vjzfb-MuiButtonBase-root-MuiButton-root"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Rubiwin
</button>
`;

exports[`renders correctly props object 1`] = `
<button
  className="makeStyles-root-1 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root test css-1e6y48t-MuiButtonBase-root-MuiButton-root"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      color="transparent"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <rect
        fillOpacity={0}
        height="12"
        stroke="#171F46"
        width="16"
        x="2"
        y="4"
      />
      <path
        d="M10 11.5L9.65803 11.8648C9.85036 12.0451 10.1496 12.0451 10.342 11.8648L10 11.5ZM1.65803 4.36477L9.65803 11.8648L10.342 11.1352L2.34197 3.63523L1.65803 4.36477ZM10.342 11.8648L18.342 4.36477L17.658 3.63523L9.65803 11.1352L10.342 11.8648Z"
        fill="#171F46"
        strokeOpacity={0}
      />
    </svg>
  </span>
  Rubiwin
  <span
    className="MuiButton-endIcon MuiButton-iconSizeMedium css-9tj150-MuiButton-endIcon"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      color="transparent"
      focusable="false"
      viewBox="0 0 20 20"
    >
      <rect
        fillOpacity={0}
        height="12"
        stroke="#171F46"
        width="16"
        x="2"
        y="4"
      />
      <path
        d="M10 11.5L9.65803 11.8648C9.85036 12.0451 10.1496 12.0451 10.342 11.8648L10 11.5ZM1.65803 4.36477L9.65803 11.8648L10.342 11.1352L2.34197 3.63523L1.65803 4.36477ZM10.342 11.8648L18.342 4.36477L17.658 3.63523L9.65803 11.1352L10.342 11.8648Z"
        fill="#171F46"
        strokeOpacity={0}
      />
    </svg>
  </span>
</button>
`;

exports[`should be large 1`] = `
<button
  className="makeStyles-root-1 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeLarge MuiButton-textSizeLarge MuiButtonBase-root  css-kpm0tx-MuiButtonBase-root-MuiButton-root"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Rubiwin
  <span
    className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
  />
</button>
`;

exports[`should be small 1`] = `
<button
  className="makeStyles-root-1 MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButtonBase-root  css-1knaqv7-MuiButtonBase-root-MuiButton-root"
  disabled={false}
  onBlur={[Function]}
  onContextMenu={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  Rubiwin
</button>
`;
